# elasticai.preprocessor

./: .gitignore  LICENSE  README.md  conftest.py  devenv.nix  devenv.yaml  pyproject.toml
.github/actions/setup-devenv/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: check-build.yml  check-docs.yml  check-lint.yml  check-tests.yml  docs.yml  release.yml
docs/: conf.py
elastic-ai/creator_plugins/waveform/c/: waveform_lut_template.h
elastic-ai/creator_plugins/waveform/src/: waveform_lut_opt.py  waveform_ram_full.py
elastic-ai/creator_plugins/waveform/verilog/: waveform_ram_opt.v
elastic-ai/creator_plugins/windower/: __init__.py
elastic-ai/preprocessor/: _basics_test.py
elastic-ai/preprocessor/sda/: sda.py
elastic-ai/preprocessor/thresholding/: __init__.py  thresholding.py
elastic-ai/preprocessor/transformation/: transformation.py
elastic-ai/preprocessor/translation/: __init__.py
elasticAI/creator_plugins/datarate/: __init__.py  meta.toml
elasticAI/creator_plugins/datarate/src/: __init__.py  cic.py  filter_cic.py  filter_poly_asic.py  filter_poly_fpga.py
elasticAI/creator_plugins/datarate/tests/: cic_test.py  filter_cic_tb.py  filter_cic_test.py  filter_polydec_asic_tb.py  filter_polydec_asic_test.py  filter_polydec_fpga_tb.py  filter_polydec_fpga_test.py  polydec_asic_test.py  polydec_fpga_test.py
elasticAI/creator_plugins/datarate/verilog/: cic.v  filter_cic.v  polydec_asic.v
elasticAI/creator_plugins/filter_data/src/: filter_fir.py  filter_fir_delay.py
elasticAI/creator_plugins/filter_data/tests/: filter_fir_delay_test.py
elasticAI/creator_plugins/thresholding/src/: filter_mavg.py
elasticAI/creator_plugins/thresholding/tests/: filter_mov_avg_norm_tb.py  filter_mov_avg_norm_test.py  filter_mov_avg_pow2_test.py
elasticAI/creator_plugins/waveform/: README.md  __init__.py  meta.toml  utils.py
elasticAI/creator_plugins/waveform/src/: waveform_lut_full.py  waveform_ram_opt.py
elasticAI/creator_plugins/waveform/tests/: waveform_lut_full_test.py  waveform_lut_opt_test.py  waveform_ram_full_test.py  waveform_ram_opt_test.py
elasticAI/creator_plugins/waveform/verilog/: waveform_ram_full.v
elasticAI/preprocessor/: __init__.py  _basics_test.py  _check_funcs.py  _common_func.py  _common_func_test.py  _plot_helper.py  waveform_generator_test.py
elasticAI/preprocessor/downsampling/: __init__.py  downsampling_test.py
elasticAI/preprocessor/filter/: __init__.py  filtering.py  filtering_test.py
elasticAI/preprocessor/framing/: frame_generator.py  frame_generator_test.py
elasticAI/preprocessor/normalization/: normalization.py  normalization_test.py
elasticAI/preprocessor/referencing/: __init__.py
elasticAI/preprocessor/sda/: __init__.py  sda_test.py
elasticAI/preprocessor/thresholding/: __init__.py  thresholding.py  thresholding_test.py
elasticAI/preprocessor/transformation/: transformation.py
elasticAI/preprocessor/translation/: __init__.py  ir2c.py  ir2c_test.py
elasticAI/preprocessor/windower/: __init__.py  window.py  window_test.py
elasticai/creator_plugins/datarate/: README.md  __init__.py  meta.toml  utils.py
elasticai/creator_plugins/datarate/src/: __init__.py  filter_cic.py  filter_poly_asic.py  (+2 more)
elasticai/creator_plugins/filter_data/: __init__.py  meta.toml  utils.py
elasticai/creator_plugins/mac/: utils.py
elasticai/creator_plugins/player/: README.md  __init__.py  meta.toml  utils.py
elasticai/creator_plugins/thresholding/: README.md  __init__.py  meta.toml
elasticai/creator_plugins/waveform/: meta.toml  utils.py
elasticai/creator_plugins/windower/: README.md  __init__.py  meta.toml  utils.py
elasticai/preprocessor/: _basics.py  _basics_test.py  _check_funcs.py  _check_funcs_test.py  _common_func.py  _common_func_test.py  _logger.py  _plot_helper.py  _plot_helper_test.py  waveform_generator.py  waveform_generator_test.py
elasticai/preprocessor/adc/: __init__.py  adc.py  adc_test.py
elasticai/preprocessor/downsampling/: __init__.py  augmentation.py  augmentation_test.py  downsampling.py  downsampling_test.py
elasticai/preprocessor/filter/: filtering.py  filtering_test.py
elasticai/preprocessor/framing/: __init__.py  frame_generator.py  frame_generator_test.py
elasticai/preprocessor/normalization/: __init__.py  normalization.py  normalization_test.py
elasticai/preprocessor/referencing/: common_referencing.py  common_referencing_test.py
elasticai/preprocessor/sda/: __init__.py  sda_test.py
elasticai/preprocessor/thresholding/: thresholding.py
elasticai/preprocessor/transformation/: __init__.py  transformation.py  transformation_test.py
elasticai/preprocessor/translation/: ir2c.py  ir2fpga_test.py
elasticai/preprocessor/windower/: __init__.py  window.py  window_test.py
elasticai0/creator_plugins/filter_data/: meta.toml
elasticai0/preprocessor/filter/: __init__.py  filtering.py
elasticai0/preprocessor/framing/: frame_generator.py  frame_generator_test.py
elasticai0/preprocessor/normalization/: normalization_test.py
elasticai0/preprocessor/referencing/: __init__.py
elasticai0/preprocessor/translation/: ir2c_test.py
elasticai_temp/preprocessor/: _basics.py  _check_funcs_test.py
elasticai_temp/preprocessor/downsampling/: downsampling_test.py
elasticai_temp/preprocessor/framing/: __init__.py
elasticai_temp/preprocessor/normalization/: normalization.py
elasticai_temp/preprocessor/referencing/: common_referencing.py
elasticai_temp/preprocessor/sda/: sda.py
elasticai_temp/preprocessor/transformation/: transformation_test.py
elasticai_temp/preprocessor/translation/: ir2c.py
elasticai_temp/preprocessor/windower/: window.py
equi_checker/src/: equivalence.py  loader.py
equi_checker/tests/: test_equivalence_example.py  test_windower.py
plugins_c/adc/: adc.c  adc.h  adc_test.c
plugins_c/downsampling/: downsampling.c  downsampling.h  downsampling_test.c
plugins_python/c_filter/: filter_fir.py  filter_fir_all.py  filter_iir.py  filter_mavg.py
plugins_python/c_memory/: memory_test.py  waveform_lut.py
tests/: test_equivalence_example.py
(+96 files in other folders)
