[project]
name = "elasticai.preprocessor"
version = "0.1.0"
description = "Python Extension for Hardware-Aware Signal Processing"
readme = "README.md"
requires-python = ">=3.12, <3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Andreas Erbsloeh", email = "andreas.erbsloeh@uni-due.de" },
  { name = "Florian Hettstedt", email = "florian.hettstedt@uni-due.de" }
]
keywords = [
  "embedded hardware",
  "hardware-software co-design",
  "quantization",
  "signal preprocessing"
]
dependencies = [
  "elasticai-creator",
  "numpy>=2.4.6",
  "scipy>=1.17.1",
]

[dependency-groups]
dev = [
  "build>=1.2.2.post1",
  "cffi>=2.0.0",
  "coverage>=7.11.3",
  "hypothesis>=6.152.9",
  "matplotlib>=3.10.9",
  "pip-audit>=2.10.1",
  "pre-commit>=4.0.1",
  "tach>=0.23.0",
]
docs = [
  "myst-parser>=4.0.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-prompt>=1.9.0",
  "sphinx-togglebutton>=0.3.2",
  "sphinxcontrib-mermaid>=1.0.0",
  "sphinxext-opengraph>=0.9.1",
]
lint = [
  "elastic-ai-equi-checker",
  "ruff>=0.15.14",
  "ty>=0.0.41",
]
test = [
  "cocotb>=2.0.1",
  "pytest>=9.0.3",
  "pytest-testmon>=2.2.0",
]

[build-system]
requires = ["hatch-vcs", "hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["elasticai"]
omit = [
  "**/*_test.py",
  "**/utils.py",
  "**/__init__.py",
  "**/_*.py",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
# where = ["."]
include = ["elasticai"]
exclude = [
  ".venv",
  "build*",
  "equi_checker",
  "plugins_c",
  "plugins_python",
  "**/*_test.py"
]

[tool.hatch.build.targets.wheel]
packages = ["elasticai"]
exclude = [
  ".venv",
  "build*",
  "equi_checker",
  "plugins_c",
  "plugins_python",
  "**/*_test.py"
]
# only-packages = true

[tool.pytest]
# addopts = ["--import-mode=importlib"]
markers = [
  "simulation: a slow simulation test",
]
minversion = "9.0"
norecursedirs = ["plugins_c", "plugins_python"]
python_files = ["*_test.py"]
pythonpath = ["."]
testpaths = ["elasticai/*"]

[tool.ruff]
include = [
  "pyproject.toml",
  "elasticai/**/*.py",
]
exclude = [".venv", "build*", "equi_checker", "plugins_c", "plugins_python"]
# Same as Black.
line-length = 106
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["D101", "D102", "E741", "E721", "E722"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ty.src]
include = ["elasticai"]
exclude = [
  "elasticai/**/*_test.py",
  "elasticai/**/adc.py",
]

[tool.uv]
default-groups = ["dev", "docs", "test", "lint"]

[tool.uv.sources]
elasticai-creator = { git = "https://github.com/es-ude/elastic-ai.creator.git", branch = "main" }
elastic-ai-equi-checker = { git = "https://github.com/es-ude/elastic-ai.equi-checker.git", branch = "main" }
